--- a/pom.xml
+++ b/pom.xml
@@ -14,6 +14,12 @@
             <artifactId>protobuf-java</artifactId>
             <version>2.2.0</version>
         </dependency>
+        <dependency>
+                <groupId>junit</groupId>
+                <artifactId>junit</artifactId>
+                <version>4.8.1</version>
+                <scope>test</scope>
+        </dependency>
 
     </dependencies>
 
